test23
python3 dynomodb_global_table.py 
  File "/Users/KMBL350986/dynomodb_global_table.py", line 3
    for table in $(aws dynamodb list-global-tables \
                 ^
SyntaxError: invalid syntax
